Chapter2/1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-step6-svc
spec:
  type: ClusterIP
  selector:
    app: project-step6
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
